# carford

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env-example  pyproject.toml
app/: __init__.py  auth.py  config.py  models.py  routes.py  schemas.py
tests/: conftest.py  test_auth.py  test_cars.py  test_owners.py
