[tool.poetry]
name = "carford"
version = "0.1.0"
description = ""
authors = ["Alexandre Bertuol <axdbertuol@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.7"
Flask-Pydantic = "^0.12.0"
psycopg2-binary = "^2.9.1"
pydantic-settings = "^2.3.3"
flask-jwt-extended = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
